--- a/AxaColpatria.ArlpoliciesAPI/AxaColpatria.ArlpoliciesAPI.CompositeExporter/pom.xml
+++ b/AxaColpatria.ArlpoliciesAPI/AxaColpatria.ArlpoliciesAPI.CompositeExporter/pom.xml
@@ -20,6 +20,7 @@
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,datasource/datasource=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,synapse/metadata=yaml,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
     <com.axa.metadata_._ArlPoliciesAPI_swagger>capp/EnterpriseServiceBus</com.axa.metadata_._ArlPoliciesAPI_swagger>
     <com.axa.sequence_._ArlPolicesPruebab1InSeq>capp/EnterpriseServiceBus</com.axa.sequence_._ArlPolicesPruebab1InSeq>
+    <com.axa.sequence_._ArlPolicesPruebaA1InSeq>capp/EnterpriseServiceBus</com.axa.sequence_._ArlPolicesPruebaA1InSeq>
   </properties>
   <dependencies>
     <dependency>
@@ -49,6 +50,12 @@
     <dependency>
       <groupId>com.axa.sequence</groupId>
       <artifactId>ArlPolicesPruebab1InSeq</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.axa.sequence</groupId>
+      <artifactId>ArlPolicesPruebaA1InSeq</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
     </dependency>
